added resend mail for email verification API
